Ignore more stuff

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,19 @@
 *.ndfbin
 Gen/PC/NDF/
 Gen/Resources/Catalog.cat
+Gen/PC/NDF/Patchable/GFX/AllUnit_SourceHashes.ndfbin
+Gen/PC/NDF/Patchable/GFX/AllUnit.ndfbin
+Gen/PC/NDF/Patchable/GFX/GDConstanteOriginal_SourceHashes.ndfbin
+Gen/PC/NDF/Patchable/GFX/Sound_SourceHashes.ndfbin
+Gen/PC/NDF/Patchable/GFX/Sound.ndfbin
+Gen/PC/NDF/Patchable/GFX/Specific_SourceHashes.ndfbin
+Gen/PC/NDF/Patchable/GFX/Specific.ndfbin
+Gen/PC/NDF/Patchable/GFX/Terrains_SourceHashes.ndfbin
+Gen/PC/NDF/Patchable/GFX/UI_SourceHashes.ndfbin
+Gen/PC/NDF/Patchable/GFX/UI.ndfbin
+Gen/PC/NDF/Patchable/GFX/Unit_SourceHashes.ndfbin
+Gen/PC/NDF/Patchable/GFX/Unit.ndfbin
+Gen/PC/NDF/Patchable/GFX/Weapon_SourceHashes.ndfbin
+Gen/PC/NDF/Patchable/GFX/Weapon.ndfbin
+Gen/PC/NDF/Patchable/UI/Components_SourceHashes.ndfbin
+Gen/PC/NDF/Patchable/UI/Components.ndfbin
